--- a/report/pom.xml
+++ b/report/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>it.jasonravagli.gym</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 	<artifactId>report</artifactId>
